Name          : data-lens-ixset
Version       : 0.1.0
Synopsis      : A Lens for IxSet
Homepage      : https://github.com/dag/data-lens-ixset
License       : BSD3
License-file  : LICENSE
Author        : Dag Odenhall
Maintainer    : dag.odenhall@gmail.com
Category      : Control, Comonad, Data Structures
Build-type    : Simple
Cabal-version : >=1.2

Library
  Exposed-modules : Data.Lens.IxSet
  Build-depends   : base >= 4 && < 5,
                    data-lens >= 2.0 && < 2.1,
                    ixset >= 1.0 && < 1.1

Executable test-data-lens-ixset
  Main-is       : test-data-lens-ixset.hs
  Build-depends : QuickCheck >= 2.4 && < 2.5
